--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
+      
     />
+    <!-- wtf is meta/name and meta/content -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,20 +26,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>BrainFlix</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <body id="root">
+    <!-- change the "root" location from the inner div, is this bad practive??? -->
+    <!-- i mean, in essence it just move everything 1 level up, 'more traditional...' everything is going to be nested inside the body
+    instead of 1 level lower-->
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    
+    <!-- <div id="root"></div> -->
+    <!-- if i delete this div, we -->
+    <!-- how the index.html referencing this file? line3 in index.js? the import???-->
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
