Implemented NxtVideo click functionality with body

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
     -->
     <title>BrainFlix</title>
   </head>
-  <body id="root">
+  <body>
+    <div id="root"></div>
     <!-- change the "root" location from the inner div, is this bad practive??? -->
     <!-- i mean, in essence it just move everything 1 level up, 'more traditional...' everything is going to be nested inside the body
     instead of 1 level lower-->
